# EPS-Easy_Pallet_Solution

./: .gitignore  README  README.txt
.obsidian/: workspace.json
CSVtoJSON_converter_Pyhton/: CSVtoJSON_converter_Pyhton.rar  Preleva-dati_2.0.py  config.ini  menù.py  menù_V2.0.exe.lnk
CSVtoJSON_converter_Pyhton/exports/: export.json
Documentation/: README.md  Relations.canvas
Documentation/.obsidian/: graph.json  workspace.json
Documentation/Architecture/: Relations.canvas  main.cpp.md
EPS-Project/: CMakeLists.txt  main.cpp
Obsidian_Notes/: Relations.canvas
Python_Scripts/3d visualizer python/: tester.py
Python_Scripts/CSVtoJSON_converter_Pyhton_STABLE/: menù_V2.0.lnk  menù_V2.0.py
Testing/CSVtoJSON_converter_Pyhton/: menù_V2.0.lnk  menù_V2.0.py  menù_V2.0_WIN.lnk
Testing/Griglia/: griglia.cpp
Testing/Input/: CMakeLists.txt  README
Testing/Input/libraries/rapidjson/: document.h
Testing/Input/src/: getjson.h  main.cpp  output.txt  pacco.h  qsp.h
Testing/Model/: README.txt
Testing/Model/002/: CMakeLists.txt  main.cpp
Testing/Model/002/libraries/3D_Objects/headers/: Pack.h  Pallet.h  PalletGroup.h  SinglePallet.h
Testing/Model/002/libraries/3D_Objects/src/: Pack.cpp  Pallet.cpp  PalletGroup.cpp  SinglePallet.cpp
Testing/Model/002/libraries/Geometry/headers/: 2DPlane.h  Cell.h
Testing/Model/002/libraries/Geometry/src/: 2DPlane.cpp
Testing/Model/002/libraries/Utility/src/: getjson.cpp  inputmanager.cpp  quicksort.cpp
Testing/Model/003/: CMakeLists.txt  main.cpp
Testing/Model/003/doc/: README.txt
Testing/Model/003/headers/3D_Objects/: Pack.h  Pallet.h  PalletGroup.h
Testing/Model/003/headers/Geometry/: 3DSpace.h  Cell.h  DefinedGeometry.h  DefinedObjects.h  gridSpace.h
Testing/Model/003/headers/Operations/: nestingSort.h
Testing/Model/003/src/3D_Objects/: Pack.cpp  Pallet.cpp  PalletGroup.cpp
Testing/Model/003/src/Geometry/: 2DPlane.cpp  3DSpace.cpp  Cell.cpp  gridSpace.cpp
Testing/Model/003/src/Operations/: nestingSort.cpp
Testing/Piani_2D/: piani2d.cpp
build-EPS-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  .ninja_log.recompact  .ninja_log.restat  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-EPS-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-EPS-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/EPS_autogen/: deps
(+40 files in other folders)
